--- a/hw07.md
+++ b/hw07.md
@@ -6,7 +6,7 @@ nav_order: 8
 desc: "Linked Lists in C++ with Structs"
 assigned: 2023-03-01 13:00
 due: 2023-03-15 23:59
-published: false
+published: true
 ---
 
 # {{page.title}} - {{page.desc}}
